# rust-ringo-fm-sdk

./: .gitignore  Cargo.toml  README.md  justfile
.github/workflows/: publish.yaml
crates/apple-fm-sdk/: Cargo.toml  build.rs
crates/apple-fm-sdk-sys/: Cargo.toml  build.rs
crates/apple-fm-sdk-sys/src/: lib.rs
crates/apple-fm-sdk/src/: error.rs  generable.rs  generated.rs  handle.rs  lib.rs  model.rs  prompt.rs  schema.rs  session.rs  stream.rs  tool.rs  transcript.rs
crates/apple-fm-sdk/tests/: session.rs
crates/ringo-fm/: Cargo.toml  build.rs
crates/ringo-fm-sys/: Cargo.toml  build.rs  wrapper.h
crates/ringo-fm/examples/: simple_inference.rs  streaming_example.rs  transcript_processing.rs
crates/ringo-fm/src/: bridge_rust.c  error.rs  feedback.rs  generable.rs  generated.rs  handle.rs  lib.rs  model.rs  options.rs  prompt.rs  schema.rs  schema_discovery.rs  session.rs  stream.rs  tool.rs  transcript.rs
crates/ringo-fm/tests/: fuzz_feedback.rs  fuzz_proptest.rs  generable.rs  session.rs
examples/: simple_inference.rs  streaming_example.rs  transcript_processing.rs
