[workspace]
resolver = "2"
members = ["crates/apple-fm-sdk-sys", "crates/apple-fm-sdk"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "Apache-2.0"
repository = "https://github.com/ringo-fm/rust-ringo-fm-sdk"

[workspace.dependencies]
apple-fm-sdk-sys = { path = "crates/apple-fm-sdk-sys", version = "0.1.0" }
libc = "0.2"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync", "macros"] }
futures-core = "0.3"
async-trait = "0.1"
